Got the final display to show up and tinkered with the CSS to align it correctly. Question answers are still incorrect and the progress function isn't working anymore. Still need to look at the answer values. Also start looking for a new form. The classwork one is ugly. The score function also isn't adding correctly. Finally, nothing is being saved to the server, so you need to work that out, plus add a high score function and get the reset button working. Oh! Look at media queries, too.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -155,6 +155,9 @@ hr {
 
 #final-display {
     display: none;
+    justify-content: center;
+    align-items: center;
+
 }
 
 form {
@@ -210,4 +213,8 @@ button #enter-initials {
     width: auto;
     text-align: center;
     margin-top: 20px;
+}
+
+.quiz-repeat {
+    text-align: center;
 }
